# geo-index

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  versions.json
.github/workflows/: python-docs.yml  python-wheels.yml  rust-release.yml  test.yml
0.2.0-beta.2/: objects.inv  sitemap.xml
0.2.0-beta.2/api/kdtree/: index.html
benches/: README.md  convert_csv_to_raw.py  distance.rs  flatbush.rs  generate_data.py  pyproject.toml  real_world_case.rs  requirements.txt  rtree.py  rtree.rs
examples/: distance_metrics.rs  geometry_neighbors.rs
fixtures/: README.md  data1_flatbush_js.raw  data1_input.raw  flatbush_generate.js  generate_data.py
integration-test/: Cargo.toml
integration-test/src/: main.rs
js/: Cargo.toml  README.md
js/src/: lib.rs  rtree.rs
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/CHANGELOG/: index.html
latest/api/kdtree/: index.html
latest/api/rtree/: index.html
latest/search/: search_index.json
python/: CHANGELOG.md  Cargo.toml  DEVELOP.md  README.md  bench.py  build.rs  mkdocs.yml  pyproject.toml
python/docs/api/: kdtree.md  rtree.md
python/python/: _rust.pyi  enums.py
python/python/geo_index/: _rust.pyi
python/python/geoindex_rs/: __init__.py  _rust.pyi  kdtree.pyi  rtree.pyi
python/python/geoindex_rs/tests/: test_buffer_protocol.py  test_buffers.py
python/src/: common.rs  coord_type.rs  kdtree.rs  lib.rs  rtree.rs  util.rs
python/src/kdtree/: builder.rs  input.rs  metadata.rs  mod.rs  range.rs  within.rs
python/src/rtree/: boxes_at_level.rs  builder.rs  input.rs  intersection.rs  metadata.rs  mod.rs  neighbors.rs  partitions.rs  search.rs
python/tests/: test_buffers.py  test_kdtree.py  test_rtree.py
scripts/: bench.sh
src/: builder.rs  error.rs  index.rs  indices.rs  lib.rs  trait.rs  type.rs  util.rs
src/flatbush/: builder.rs  error.rs  index.rs  mod.rs  trait.rs  traversal.rs  util.rs
src/flatbush/sort/: hilbert.rs  mod.rs  str.rs  trait.rs
src/kdbush/: builder.rs  index.rs  mod.rs  test.rs  trait.rs
src/kdtree/: builder.rs  constants.rs  error.rs  index.rs  mod.rs  test.rs  trait.rs  traversal.rs
src/rtree/: builder.rs  constants.rs  distance.rs  error.rs  index.rs  mod.rs  trait.rs  traversal.rs  util.rs
src/rtree/sort/: hilbert.rs  mod.rs  str.rs  trait.rs  util.rs
src/test/: integration.rs  mod.rs
v0.2.0/: 404.html
v0.2.0/api/rtree/: index.html
v0.2.0/search/: search_index.json
v0.2.1/: index.html  sitemap.xml
v0.2.1/CHANGELOG/: index.html
v0.2.1/search/: search_index.json
