[package]
name = "geo-index"
version = "0.3.1"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kylebarron/geo-index"
description = "Fast, immutable, ABI-stable spatial indexes."
keywords = ["rtree", "kdtree", "spatial", "spatial-index", "nearest-neighbor"]
categories = ["data-structures", "algorithms", "science::geo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1"
float_next_after = "1"
geo = "0.30.0"
geo-traits = "0.3"
geo-types = "0.7.16"
num-traits = "0.2"
rayon = { version = "1.8.0", optional = true }
thiserror = "1"
tinyvec = { version = "1", features = ["alloc", "rustc_1_40"] }
wkt = "0.14.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
geozero = "0.12"
rstar = "0.12"
zip = "2.2.2"
once_cell = "1.21.3"
rand = "0.8"

[[bench]]
name = "rtree"
harness = false

[[bench]]
name = "real_world_case"
harness = false

[[bench]]
name = "distance"
harness = false

[[example]]
name = "distance_metrics"

[[example]]
name = "geometry_neighbors"
