[package]
name = "geoindex-rs"
version = "0.2.0-beta.1"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
description = "Fast, memory-efficient 2D spatial indexes for Python."
readme = "README.md"
repository = "https://github.com/kylebarron/geo-index"
license = "MIT OR Apache-2.0"
keywords = ["python", "geospatial"]
categories = ["science::geo"]
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
arrow = "53"
bytes = "1"
geo-index = { path = "../", features = ["rayon"] }
numpy = "0.22"
pyo3 = { version = "0.22.0", features = ["macros"] }
# pyo3-arrow = "0.5.1"
pyo3-arrow = { git = "https://github.com/kylebarron/arro3", rev = "64a659133d79f0f875cf8e87f30ccd1c34fc8ad3" }
thiserror = "1"

[profile.release]
lto = true
codegen-units = 1
