[package]
name = "geoindex-rs"
version = "0.2.0"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
description = "Fast, memory-efficient 2D spatial indexes for Python."
readme = "README.md"
repository = "https://github.com/kylebarron/geo-index"
license = "MIT OR Apache-2.0"
keywords = ["python", "geospatial"]
categories = ["science::geo"]
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
arrow-array = "56.1.0"
arrow-buffer = "56.1.0"
arrow-cast = "56.1.0"
arrow-schema = "56.1.0"
bytemuck = "1.21.0"
bytes = "1.10"
geo-index = { path = "../", features = ["rayon"] }
numpy = "0.26"
pyo3 = { version = "0.26", features = ["macros"] }
thiserror = "1"
pyo3-arrow = "0.12.0"

[profile.release]
lto = true
codegen-units = 1
