[build-system]
requires = ["maturin>=1.4.0,<2.0"]
build-backend = "maturin"

[project]
name = "geoindex-rs"
requires-python = ">=3.8"
dependencies = []
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "geoindex_rs._rust"
python-source = "python"

[tool.poetry]
name = "geoindex-rs"
version = "0.0.0"
description = ""
authors = []
packages = [{ include = "python/geoindex_rs" }]

[tool.poetry.dependencies]
# Note: this is only for dev dependencies
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
maturin = "^1.4.0"
numpy = "*"

[tool.poetry.scripts]
test = "pytest:main"