[build-system]
requires = ["maturin>=1.4.0,<2.0"]
build-backend = "maturin"

[project]
name = "geoindex-rs"
requires-python = ">=3.9"
dependencies = []
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "geoindex_rs._rust"
python-source = "python"

[tool.uv]
dev-dependencies = [
    "maturin>=1.7.4",
    "numpy>=1",
    "pip>=24.2",
    "pytest>=8",
]
