[build-system]
requires = ["maturin>=1.4.0,<2.0"]
build-backend = "maturin"

[project]
name = "geoindex-rs"
requires-python = ">=3.9"
dependencies = ["arro3-core"]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "geoindex_rs._rust"
python-source = "python"

[tool.uv]
dev-dependencies = [
    "griffe-inherited-docstrings>=1.0.1",
    "ipykernel>=6.29.5",
    "maturin>=1.7.4",
    "mike>=2.1.3",
    "mkdocs-material[imaging]>=9.5.40",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.13.0",
    "mkdocstrings>=0.27.0",
    "numpy>=1",
    "pip>=24.2",
    "pyarrow>=17.0.0",
    "pytest>=8.3.3",
    "ruff>=0.8.4",
]
